# knowledge-base-assistant

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.skills/: knowledge-base-architect.md
.streamlit/: config.toml
app/: main.py
app/api/: documents.py  health.py  ingestion.py  langgraph.py  rag.py  routes.py
app/config/: settings.py
app/embeddings/: __init__.py  embeddings.py
app/loaders/: __init__.py  confluence_loader.py
app/models/: schemas.py
app/prompts/: __init__.py
app/rag/: pipeline.py
app/services/: confluence_service.py  document_service.py  langgraph_agent_service.py  llm_service.py  metadata_enrichment_service.py  rag_service.py
app/vectorstore/: __init__.py  chroma_store.py  in_memory_store.py  interfaces.py
chroma_store/: chroma.sqlite3
docker/: Dockerfile  docker-compose.yml
frontend/: app.py
graph/: langgraph_agent.py
memory/: documents.json
tests/: test_api_routes.py  test_app.py  test_chroma_store.py  test_confluence_loader.py  test_embeddings_provider.py  test_langgraph_agent.py  test_rag.py  test_rag_pipeline.py
