[project]
name = "knowledge-base-app"
version = "0.1.0"
description = "Local-first AI knowledge base assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.22.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "httpx>=0.26.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.3.0",
  "streamlit>=1.30.0",
  "pytest>=8.0.0",
  "langchain>=0.0.319",
  "langchain-ollama>=0.3.10",
  "langchain-chroma>=0.2.6",
  "chromadb>=0.4.0"
]

[project.scripts]
start = "uvicorn app.main:app --reload"
test = "pytest"

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
